deployment/kubernetes/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saas-docs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-veridise.tools
    external-dns.alpha.kubernetes.io/hostname: "docs.veridise.tools"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: ingress-public
  rules:
    - host: docs.veridise.tools
      http:
        paths:
          - backend:
              service:
                name: saas-docs
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - docs.veridise.tools
      secretName: docs-veridise-tools
